--- a/css/consultas.css
+++ b/css/consultas.css
@@ -1,3 +1,17 @@
 form label{
     font-weight:bold;
   }
+
+  .foto-div {
+    display:table; 
+    margin:0 auto; 
+    margin-bottom:1rem
+}
+
+.img-examen{
+    width: 200px; 
+    height: 150px
+}
+
+
+
